data/all_generated_tests/raw_wast_tests/br_if_InvalidorInconsistentControlFlowGraph_1721.wast
;; 2. **Branch to Unopened Label**:    - **Description**: Test `br_if` to a label before any structured control instruction is opened, i.e., trying to branch before any `block`, `loop`, or `if` has been encountered.    - **Constraint**: No labels available for reference.    - **CFG Impact**: CFG may become inconsistent as it includes a branch to a non-existent control structure.

(assert_invalid
  (module
    (func $branch_to_unopened_label
      (br_if 0 (i32.const 1))
    )
  )
  "unknown label"
)